<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="@color/biru">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/biru"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto_bulat"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:padding="10dp"
        android:src="@drawable/foto_kecil" />

    <TextView
        android:id="@+id/head"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_toRightOf="@+id/foto_bulat"
        android:gravity="center|left"
        android:textColor="@color/putih"
        android:textSize="25dp"
        android:text="@string/nama" />

    <View
        android:id="@+id/batas"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/head"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="?android:attr/listDivider"/>
    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/batas"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/profile"
        android:textColor="@color/putih"
        android:textSize="20dp"/>

    <View
        android:id="@+id/garis_profile"
        android:layout_width="80dp"
        android:layout_height="2dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/profile"
        android:background="@color/putih" />

    <ImageView
        android:id="@+id/foto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/garis_profile"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/foto_liburan"
        />
    <TextView
        android:id="@+id/deskripsi"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/foto"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/deskripsi_fadli"
        android:textColor="@color/putih"
        android:gravity="center"/>
    <TextView
        android:id="@+id/no_hp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/deskripsi"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/hp"
        android:text="@string/nomer_hp"
        android:textColor="@color/putih"
        android:textSize="15dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/fb"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/no_hp"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/fb"
        android:text="@string/email"
        android:textColor="@color/putih"
        android:textSize="15dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/map"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/fb"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/map"
        android:text="@string/map"
        android:textColor="@color/putih"
        android:textSize="15dp"
        android:gravity="center"/>
    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/map"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:text="About"
        android:textColor="@color/putih"
        android:background="@drawable/bulat"/>
</RelativeLayout>