<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Music"
    android:background="@color/biru">
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/biru"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto_bulat"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:padding="10dp"
        android:src="@drawable/foto_kecil" />

    <TextView
        android:id="@+id/head"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_toRightOf="@+id/foto_bulat"
        android:gravity="center|left"
        android:textColor="@color/putih"
        android:textSize="25dp"
        android:text="@string/nama" />

    <View
        android:id="@+id/batas"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/head"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_video"
        android:layout_below="@+id/batas"
        android:layout_marginTop="10dp"
        android:textColor="@color/kuning"
        android:text="@string/video_1"
        android:layout_marginLeft="10dp"
        />
    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/video1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_video"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        app:videoId="hqDP482JeXc"
        app:autoPlay="false"
        app:showYouTubeButton="false"
        app:showSeekBar="true"
        app:showVideoCurrentTime="true"
        app:showVideoDuration="true"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_video2"
        android:layout_below="@+id/video1"
        android:layout_marginTop="10dp"
        android:textColor="@color/kuning"
        android:text="@string/video_2"
        android:layout_marginLeft="10dp"
        />
    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/video2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_video2"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        app:videoId="eYDI8b5Nn5s"
        app:autoPlay="false"
        app:showYouTubeButton="false"
        app:showSeekBar="true"
        app:showVideoCurrentTime="true"
        app:showVideoDuration="true"
        />

    <TextView
        android:id="@+id/text_video3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/video2"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="9dp"
        android:text="@string/video_3"
        android:textColor="@color/kuning" />

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/video3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_video3"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        app:videoId="ahdH8eTydWY"
        app:autoPlay="false"
        app:showYouTubeButton="false"
        app:showSeekBar="true"
        app:showVideoCurrentTime="true"
        app:showVideoDuration="true"
        />



</RelativeLayout>