<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Daily"
    android:background="@color/biru">
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/biru"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto_bulat"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:padding="10dp"
        android:src="@drawable/foto_kecil" />

    <TextView
        android:id="@+id/head"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_toRightOf="@+id/foto_bulat"
        android:gravity="center|left"
        android:textColor="@color/putih"
        android:textSize="25dp"
        android:text="@string/nama" />

    <View
        android:id="@+id/batas"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/head"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="?android:attr/listDivider" />
    <TextView
        android:id="@+id/daftar_teman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/batas"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/teman"
        android:textColor="@color/putih"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/daftar_teman"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"/>
    <View
        android:id="@+id/batas_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/head"
        android:layout_marginTop="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="?android:attr/listDivider" />
    <TextView
        android:id="@+id/kegiatan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/batas_2"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:text="@string/kegiatan"
        android:textColor="@color/putih"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list2"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_below="@+id/kegiatan"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"/>
</RelativeLayout>